Create first APK.